Replace PianguasTreeDecorator with a configurable ReplaceInSoilDecorator